# 004_autoTRD

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml  requirements.txt
Simulation/: index.html  server.py
alembic/: env.py
config/: logging.yaml  settings.py
scripts/: backup_db_gdrive.sh  check_acc_list.py  deploy.sh  gen_backup_guide.py  gen_db_docs.py  gen_live_switch_guide.py  init_db.py  manual_order.py  pull_emergency_files.sh  setup_db.sh  setup_opend.sh  simulate.py  trader.sh  verify_notify.py
src/: main.py
src/backtest/: engine.py
src/broker/: account.py  executor.py
src/data/: fetcher.py  screener.py  universe_builder.py
src/models/: __init__.py  base.py  critic.py  market.py  portfolio.py  price.py  strategy.py  trade.py
src/notify/: notifier.py
src/risk/: manager.py
src/strategy/: base.py  critic.py  registry.py  selector.py
src/strategy/plugins/: _rsi_reversal_v1.py  _sma_crossover_v1.py  breakout.py  breakout_v2.py  breakout_v3.py  breakout_v4.py  breakout_v5.py  breakout_v6.py  pullback_v1.py  pullback_v2.py  pullback_v3.py  pullback_v4.py  rsi_reversal.py  rsi_reversal_v2.py  sma_crossover.py  sma_crossover_v2.py  sma_crossover_v3.py  sma_crossover_v4.py  sma_crossover_v5.py  sma_crossover_v6.py
src/utils/: helpers.py  logger.py
systemd/: autotrader.service  autotrader.timer  opend.service
tests/: conftest.py  test_backtester.py  test_critic.py  test_risk_manager.py  test_strategies.py
